Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/NoclosedString.ru
/? Error Léxico, no se cerró string, salida: String inválido
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 4 | COLUMNA 6 | ERROR EN LA DEFINICION DE LA CADENA: NO SE CERRO "hola
"hola